--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,11 @@ dependencies:
   flutter_bloc: ^8.1.3
 #---------------------------< UI >---------------------------
   cupertino_icons: ^1.0.2
+  carousel_slider: ^4.2.1
   font_awesome_flutter: ^10.5.0
   flutter_svg: ^2.0.7
   shimmer: ^3.0.0
+  animated_notch_bottom_bar: ^1.0.0
   lottie: ^2.6.0
 
 
